--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    Enter your name: <input type="text" id="fname" onkeyup="this.value = this.value.toUpperCase();">
+    Enter your name: <input type="text" id="fname" onblur="this.value = this.value.toUpperCase();">
 	
 	<script type="text/javascript" src="./script.js">
 	</script>
